--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.0",
     "jade": "*",
     "websocket.io": "0.2.1",
-    "jquery": "*"
+    "jquery": "*",
+    "mongodb": "~1.3.9"
   }
 }
