--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "jade": "*",
     "websocket.io": "0.2.1",
     "jquery": "*",
-    "mongodb": "~1.3.9"
+    "mongodb": "~1.3.9",
+    "mocha": "0.3.x",
+    "expect.js": "*",
+    "superagent": "*"
   }
 }
