--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
-    "websocket.io": "0.2.1",
+    "socket.io": "0.9.16",
     "jquery": "*",
     "mongodb": "~1.3.9",
     "mocha": "0.3.x",
