--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ParkingLot",
+  "name": "parking-lot",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,8 +11,7 @@
     "socket.io": "0.9.16",
     "jquery": "*",
     "mongodb": "~1.3.9",
-    "mocha": "0.3.x",
-    "expect.js": "*",
-    "superagent": "*"
+    "superagent": "*",
+    "convoy":"0.4.1"
   }
 }
