--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "jquery": "*",
     "mongodb": "~1.3.9",
     "superagent": "*",
-    "convoy":"0.4.1"
+    "convoy": "0.4.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2"
   }
 }
