--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "parking-lot",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "start": "node app.js"
   },
@@ -11,8 +10,7 @@
     "socket.io": "0.9.16",
     "jquery": "*",
     "mongodb": "~1.3.9",
-    "superagent": "*",
-    "convoy": "0.4.1"
+    "superagent": "*"
   },
   "devDependencies": {
     "grunt": "~0.4.2"
