--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "parking-lot",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "3.4.0",
-    "jade": "*",
-    "socket.io": "0.9.16",
-    "jquery": "*",
-    "mongodb": "~1.3.9",
-    "superagent": "*"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "less-middleware": "~2.2.1",
+    "morgan": "~1.9.0",
+    "pug": "^2.0.0-beta11"
   },
   "devDependencies": {
-    "grunt": "~0.4.2"
-  }
+    "webpack": "^4.17.1"
+  },
+  "author": "Keith Bloomfield <kthblmfld@gmail.com>",
+  "license": "UNLICENSED"
 }
